--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.1",
+    "cors": "^2.8.5",
     "ng-apexcharts": "^1.7.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.4",
-    "@angular/cli": "~16.0.4",
+    "@angular/cli": "^16.2.12",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
@@ -41,5 +42,17 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TenSketch/Vanavihari-Angular.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TenSketch/Vanavihari-Angular/issues"
+  },
+  "homepage": "https://github.com/TenSketch/Vanavihari-Angular#readme"
 }
