--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "eKYC-Employee-new": {
+    "Vanavihari": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/e-kyc-employee-new",
+            "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -26,7 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets/images/logos/Kiya-Logo--icon.svg",
+              "src/assets/img/vanavihari_logo.png",
               "src/assets"
             ],
             "styles": [
@@ -36,9 +36,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/apexcharts/dist/apexcharts.min.js",
-              "node_modules/@apizee/apirtc/apiRTC.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
@@ -72,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "eKYC-Employee-new:build:production"
+              "browserTarget": "Vanavihari:build:production"
             },
             "development": {
-              "browserTarget": "eKYC-Employee-new:build:development"
+              "browserTarget": "Vanavihari:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "eKYC-Employee-new:build"
+            "browserTarget": "Vanavihari:build"
           }
         },
         "test": {
