--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-kyc-employee-new",
+  "name": "Vanavihari",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,12 +20,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@apizee/apirtc": "^4.6.5",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
-    "ng-apexcharts": "^1.7.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
