--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
-    "angular-font-awesome": "^3.1.2",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
