--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "escape-html": "^1.0.3",
+    "lightgallery": "^2.7.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
