--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "escape-html": "^1.0.3",
     "lightgallery": "^2.7.2",
+    "ngx-lightbox": "^3.0.0",
+    "photoswipe": "^5.4.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
