--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "escape-html": "^1.0.3",
+    "http-proxy-middleware": "^2.0.6",
     "photoswipe": "^5.4.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
