--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "cors": "^2.8.5",
     "escape-html": "^1.0.3",
     "http-proxy-middleware": "^2.0.6",
-    "photoswipe": "^5.4.3",
+    "lightgallery": "^2.7.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
