--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@netlify/edge-functions": "^2.3.1",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.1",
@@ -29,6 +30,7 @@
     "http-proxy-middleware": "^2.0.6",
     "lightgallery": "^2.7.2",
     "rxjs": "~7.8.0",
+    "some-library": "^1.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
