--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "netlify/edge-functions/hello.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "url": "^0.11.3"
+  },
+  "netlify": {
+    "functions": "netlify/edge-functions"
   }
 }
